--- a/html/shows.html
+++ b/html/shows.html
@@ -7,11 +7,11 @@
 
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/body.css" />
-    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/footer.css" />
 
     <title>BVNKAYANI</title>
 
-    <link rel="stylesheet" href="../css/shows.css">
+    <link rel="stylesheet" href="../css/shows.css" />
   </head>
   <body>
     <div class="top">
@@ -23,11 +23,15 @@
     </div>
 
     <main>
-
       <ul>
         <li>
           <span class="data">07/09</span> <span class="local">Via Show</span>
-          <span><a href="https://www.oticket.com.br/event/854?commissioner=None&link-code=None">INGRESSO</a></span> 
+          <span
+            ><a
+              href="https://www.oticket.com.br/event/854?commissioner=None&link-code=None"
+              >INGRESSO</a
+            ></span
+          >
         </li>
       </ul>
     </main>
