--- a/html/shows.html
+++ b/html/shows.html
@@ -11,7 +11,7 @@
 
     <title>BVNKAYANI</title>
 
-    <link rel="stylesheet" href="../css/shows.css" />
+    <link rel="stylesheet" href="../css/showslist.css" />
   </head>
   <body>
     <div class="top">
